added weather widget in advisor.html added modal to index.html with an issue to be fixed soon and also added some css to input/output.css

--- a/assets/CSS/output.css
+++ b/assets/CSS/output.css
@@ -681,8 +681,21 @@ video {
   clear: none;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .box-border {
@@ -794,6 +807,10 @@ video {
 
 .w-\[weird-and-invalid\] {
   width: weird-and-invalid;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
 }
 
 .flex-shrink {
@@ -1124,6 +1141,10 @@ video {
   grid-auto-flow: column dense;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1306,6 +1327,10 @@ video {
 
 .justify-items-stretch {
   justify-items: stretch;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1737,6 +1762,11 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .decoration-slice {
   -webkit-box-decoration-break: slice;
           box-decoration-break: slice;
@@ -1847,6 +1877,16 @@ video {
      object-fit: scale-down;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1903,8 +1943,26 @@ video {
   vertical-align: super;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .uppercase {
@@ -1975,6 +2033,18 @@ video {
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
 
+.leading-5 {
+  line-height: 1.25rem;
+}
+
+.leading-9 {
+  line-height: 2.25rem;
+}
+
+.tracking-tight {
+  letter-spacing: -0.025em;
+}
+
 .text-\[\#336699\]\/\[\.35\] {
   color: rgb(51 102 153 / .35);
 }
@@ -1984,9 +2054,19 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.text-red-900 {
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(127 29 29 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2382,7 +2462,7 @@ a {
   background-color: whitesmoke;
   border-radius: 50%;
   margin-top: 100px;
-  background-image: url("/assets/IMAGES/earth.gif");
+  background-image: url("../IMAGES/earth.gif");
   background-position: center;
   background-size: 160%;
 }
@@ -2413,6 +2493,7 @@ button {
   border: solid black 1px;
   border-radius:5px;
   transition: .2s;
+  background-color: #fff;
 }
 
 a:hover {
@@ -2426,6 +2507,49 @@ button:hover {
   box-shadow: 0 0.4rem 1.4rem 0 rgba(0, 0, 119);
   transform: translateY(-0.1rem);
   transition: transform 150ms;
+}
+
+.modal {
+  width: 650px;
+  height: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2.5rem;
+  margin: 0 auto;
+  background-color: rgba(333, 333, 333, 0.0);
+  overflow: hidden;
+}
+
+.form {
+  align-items: flex-end;
+  vertical-align: middle;
+  background-image: radial-gradient(circle, rgba(47, 47, 112), rgba(47, 47, 112), rgba(47, 47, 112),  rgb(71, 71, 109));
+  padding: 75px;
+  border-radius: 15px;
+  border: 5px solid white;
+}
+
+.label {
+  margin: 30px;
+  font-size: 2.5rem;
+}
+
+.submit-button {
+  background-image: radial-gradient( rgba(47, 47, 112), rgba(47, 47, 112), rgba(47, 47, 112), rgb(215, 215, 250),  rgb(71, 71, 109));
+  border: 1px solid white;
+  border-radius: 50%;
+  width: 160px;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.input {
+  border-radius: 5px;
+  border: 3px solid black;
+  font-size: 2rem;
+  text-decoration: none;
+  margin: 8px;
 }
 
 @media (min-width: 640px) {
@@ -2487,8 +2611,42 @@ button:hover {
 }
 
 @media (min-width: 640px) {
+  .sm\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .sm\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+
+  .sm\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .sm\:underline {
     text-decoration-line: underline;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 }
 
