--- a/assets/CSS/input.css
+++ b/assets/CSS/input.css
@@ -78,7 +78,7 @@
     background-color: whitesmoke;
     border-radius: 50%;
     margin-top: 100px;
-    background-image: url("/assets/IMAGES/earth.gif");
+    background-image: url("../IMAGES/earth.gif");
     background-position: center;
     background-size: 160%;
   }
@@ -109,6 +109,7 @@
     border: solid black 1px;
     border-radius:5px;
     transition: .2s;
+    background-color: #fff;
   }
   
   a:hover {
@@ -123,3 +124,47 @@
     transform: translateY(-0.1rem);
     transition: transform 150ms;
   }
+
+  .modal {
+    width: 650px;
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2.5rem;
+    margin: 0 auto;
+    background-color: rgba(333, 333, 333, 0.0);
+    overflow: hidden;
+  }
+
+  .form {
+    align-items: flex-end;
+    vertical-align: middle;
+    background-image: radial-gradient(circle, rgba(47, 47, 112), rgba(47, 47, 112), rgba(47, 47, 112),  rgb(71, 71, 109));
+    padding: 75px;
+    border-radius: 15px;
+    border: 5px solid white;
+  }
+
+  .label {
+    margin: 30px;
+    font-size: 2.5rem;
+  }
+
+  .submit-button {
+    background-image: radial-gradient( rgba(47, 47, 112), rgba(47, 47, 112), rgba(47, 47, 112), rgb(215, 215, 250),  rgb(71, 71, 109));
+    border: 1px solid white;
+    border-radius: 50%;
+    width: 160px;
+    text-align: center;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+.input {
+  border-radius: 5px;
+  border: 3px solid black;
+  font-size: 2rem;
+  text-decoration: none;
+  margin: 8px;
+}
