--- a/assets/CSS/input.css
+++ b/assets/CSS/input.css
@@ -17,6 +17,7 @@
     line-height: 1;
     font-family: sans-serif, Arial, Helvetica;
     background-color: #000;
+    overflow: hidden;
   }
   
   .main {
@@ -48,6 +49,8 @@
     background-image: linear-gradient(180deg, rgb(0, 0, 119), rgba(1, 1, 155, 0));
     text-align: center;
     height: 75px;
+    position: sticky;
+    top: 0;
   }
   
   li {
@@ -103,13 +106,14 @@
     color: #fff;
   }
   
-  button {
+  .open-button {
     font-size: 1rem;
     padding: 5px;
     border: solid black 1px;
     border-radius:5px;
     transition: .2s;
     background-color: #fff;
+    color: black;
   }
   
   a:hover {
@@ -147,7 +151,7 @@
   }
 
   .label {
-    margin: 30px;
+    margin: 25px;
     font-size: 2.5rem;
   }
 
@@ -159,6 +163,7 @@
     text-align: center;
     font-size: 1.5rem;
     text-align: center;
+    display: inline-block;
   }
 
 .input {
@@ -167,4 +172,20 @@
   font-size: 2rem;
   text-decoration: none;
   margin: 8px;
+}
+
+.open-button {
+  border: 3px solid rgb(71, 71, 109);
+  background-image: radial-gradient( rgba(47, 47, 112), rgba(47, 47, 112), rgb(215, 215, 250));
+}
+
+.button {
+  color: #fff;
+}
+
+.leftbtn {
+  left: -30px;
+}
+
+footer {
 }
