--- a/assets/CSS/output.css
+++ b/assets/CSS/output.css
@@ -2401,6 +2401,7 @@ body {
   line-height: 1;
   font-family: sans-serif, Arial, Helvetica;
   background-color: #000;
+  overflow: hidden;
 }
 
 .main {
@@ -2432,6 +2433,8 @@ nav {
   background-image: linear-gradient(180deg, rgb(0, 0, 119), rgba(1, 1, 155, 0));
   text-align: center;
   height: 75px;
+  position: sticky;
+  top: 0;
 }
 
 li {
@@ -2487,13 +2490,14 @@ h1 {
   color: #fff;
 }
 
-button {
+.open-button {
   font-size: 1rem;
   padding: 5px;
   border: solid black 1px;
   border-radius:5px;
   transition: .2s;
   background-color: #fff;
+  color: black;
 }
 
 a:hover {
@@ -2531,7 +2535,7 @@ button:hover {
 }
 
 .label {
-  margin: 30px;
+  margin: 25px;
   font-size: 2.5rem;
 }
 
@@ -2542,6 +2546,7 @@ button:hover {
   width: 160px;
   font-size: 1.5rem;
   text-align: center;
+  display: inline-block;
 }
 
 .input {
@@ -2550,6 +2555,22 @@ button:hover {
   font-size: 2rem;
   text-decoration: none;
   margin: 8px;
+}
+
+.open-button {
+  border: 3px solid rgb(71, 71, 109);
+  background-image: radial-gradient( rgba(47, 47, 112), rgba(47, 47, 112), rgb(215, 215, 250));
+}
+
+.button {
+  color: #fff;
+}
+
+.leftbtn {
+  left: -30px;
+}
+
+footer {
 }
 
 @media (min-width: 640px) {
