--- a/assets/CSS/output.css
+++ b/assets/CSS/output.css
@@ -2430,7 +2430,7 @@ body {
 /* utilities */
 
 nav {
-  background-image: linear-gradient(180deg, rgb(0, 0, 119), rgba(1, 1, 155, 0));
+  background-image: linear-gradient(180deg, rgb(0, 0, 119, .8), rgba(1, 1, 155, 0));
   text-align: center;
   height: 75px;
   position: sticky;
