--- a/assets/CSS/input.css
+++ b/assets/CSS/input.css
@@ -114,6 +114,7 @@
   
   a:hover {
     cursor: pointer;
+    text-shadow: 0 0.4rem 1.4rem 0 rgb(139, 139, 146);
     transform: translateY(-0.1rem);
     transition: transform 150ms;
   }
@@ -185,4 +186,22 @@
 .relative {
   position: relative;
   left: -3.5rem;
+}
+
+.hotels {
+  max-height: 400px;
+  max-width: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2.5rem;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  text-decoration: underline;
+  line-height: 40px;
+  background-image: radial-gradient(circle, rgba(47, 47, 112), rgba(47, 47, 112), rgba(47, 47, 112),  rgb(71, 71, 109));
+  border-radius: 15px;
+  border: 5px solid white;
+  color: white;
+  overflow: auto;
 }
