--- a/assets/CSS/output.css
+++ b/assets/CSS/output.css
@@ -2572,6 +2572,10 @@ button:hover {
   left: -3.5rem;
 }
 
+.hotels::-webkit-scrollbar {
+  display: none;
+}
+
 .hotels {
   max-height: 400px;
   max-width: 1000px;
@@ -2587,7 +2591,7 @@ button:hover {
   border-radius: 15px;
   border: 5px solid white;
   color: white;
-  overflow: auto;
+  overflow-y: auto;
 }
 
 @media (min-width: 640px) {
