--- a/assets/CSS/input.css
+++ b/assets/CSS/input.css
@@ -19,6 +19,8 @@
     background-color: #000;
     overflow: hidden;
   }
+
+  /* Background */
   
   .main {
     position: fixed;
@@ -43,7 +45,7 @@
     }
   }
   
-  /* utilities */
+  /* Utilities */
   
   nav {
     background-image: linear-gradient(180deg, rgb(0, 0, 119, .8), rgba(1, 1, 155, 0));
