--- a/assets/CSS/output.css
+++ b/assets/CSS/output.css
@@ -2404,6 +2404,8 @@ body {
   overflow: hidden;
 }
 
+/* Background */
+
 .main {
   position: fixed;
   top: 50%;
@@ -2427,7 +2429,7 @@ body {
   }
 }
 
-/* utilities */
+/* Utilities */
 
 nav {
   background-image: linear-gradient(180deg, rgb(0, 0, 119, .8), rgba(1, 1, 155, 0));
